# rust-service-test

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
migrations/2020-03-22-174219_create_dog/: down.sql  up.sql
src/: main.rs  models.rs  schema.rs
